--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack --mode production",
+    "test": "jest",
     "lint": "eslint ."
   },
   "repository": {
@@ -21,18 +23,15 @@
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.5.0",
+    "babel-jest": "^27.3.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.4.3",
-    "webpack": "^5.60.0",
-    "webpack-cli": "^4.9.1"
+    "jest": "^27.3.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
     "core-js": "^3.19.0"
-  },
-  "_id": "netology_ajs-homeworks_map@1.0.0"
+  }
 }
